[package]
name = "system-call"
authors = [ "The syscall.rs Project Developers" ]
description = "Raw system calls"
keywords = ["syscall", "system", "call"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/strake/system-call.rs"
version = "0.1.1"

[lib]
name = "syscall"
